[package]
name = "transporter"
version = "0.1.0"
edition = "2021"
description = """
Proxy http traffic converted to tcp/http.
To Hide your proxy behind a real https server by xray/v2ray transport layer...
"""

[lib]
name = "transporter"
path = "src/lib.rs"

[dependencies]
ahash = "0.8.11"
async-trait = "0.1.83"
bytes = "1.9.0"
futures-util = "0.3.31"
h2 = "0.4.7"
http = "1.2.0"
log = "0.4.22"
pingora = { version = "0.4.0", features = ["boringssl"] }
tokio = "1.42.0"
tracing-subscriber = "0.3.19"
